--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,8 @@ pytest-mock = "^3.14.0"
 pytest-cov = "^5.0.0"
 
 [tool.poetry.group.lint.dependencies]
-ruff = "^0.5.5"
-mypy = "^1.11.0"
+ruff = "0.5.5"
+mypy = "1.11.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
