--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,13 +10,14 @@ on:
       - main
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  unit-tests:
+    name: Unit Tests
     strategy:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
+        os: [ubuntu-latest]
       fail-fast: false
-
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
       - uses: snok/install-poetry@v1
@@ -27,5 +28,20 @@ jobs:
       - name: Install Dependencies
         run: poetry install --only main,test
       - name: Test
-        run: make test-cov
+        run: make test-unit
       - uses: codecov/codecov-action@v3
+  integration-tests:
+    name: Integration Tests
+    needs: unit-tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: snok/install-poetry@v1
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+          cache: 'poetry'
+      - name: Install Dependencies
+        run: poetry install --only main,test
+      - name: Test
+        run: make test-integration
