--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,10 @@ jobs:
   integration-tests:
     name: Integration Tests
     needs: unit-tests
+    strategy:
+      matrix:
+        python-version: [ "3.11" ]
+        os: [ ubuntu-latest ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
