--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,10 @@ jobs:
         run: poetry install --only main,test
       - name: Test
         run: make test-unit
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
   integration-tests:
     name: Integration Tests
     needs: unit-tests
