:page_facing_up: Fix License name

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.2.2"
 description = "Haystack integration with DeepL translation services provider."
 authors = ["Albert Iribarne <iribarne@dribia.com>"]
 maintainers = ["Albert Iribarne <iribarne@dribia.com>", "Dribia Data Research <code@dribia.com>"]
-license = "Apache-2.0"
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/dribia/deepl-haystack"
 homepage = "https://github.com/dribia/deepl-haystack"
