--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,10 +30,9 @@ jobs:
       - name: Test
         run: make test-unit
       - uses: codecov/codecov-action@v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }}
   integration-tests:
     name: Integration Tests
     needs: unit-tests
