--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,10 @@ updates:
         dependency-name: "deepl"
       - dependency-type: "direct"
         dependency-name: "haystack-ai"
+    groups:
+      all:
+        patterns:
+          - "*"
     commit-message:
       prefix: ":arrow_up:"
     versioning-strategy: "lockfile-only"
@@ -28,6 +32,10 @@ updates:
     ignore:
       - dependency-name: "deepl"
       - dependency-name: "haystack-ai"
+    groups:
+      all:
+        patterns:
+          - "*"
     commit-message:
       prefix: ":arrow_up:"
     versioning-strategy: "increase"
