:construction_worker: update all dependencies, not only direct ones

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -28,7 +28,7 @@ updates:
     schedule:
       interval: "weekly"
     allow:
-      - dependency-type: "direct"
+      - dependency-type: "all"
     ignore:
       - dependency-name: "deepl"
       - dependency-name: "haystack-ai"
