--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,16 +26,16 @@ haystack-ai = "^2.3.0"
 pytest-dotenv = "^0.5.2"
 
 [tool.poetry.group.test.dependencies]
-pytest = "^8.3.1"
+pytest = "^8.3.5"
 pytest-mock = "^3.14.0"
 pytest-cov = "^6.0.0"
 
 [tool.poetry.group.lint.dependencies]
-ruff = "0.7.4"
-mypy = "1.13.0"
+ruff = "0.9.9"
+mypy = "1.15.0"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = ">=3.7.1,<5.0.0"
+pre-commit = "^4.1.0"
 
 [tool.ruff]
 
