--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -27,6 +27,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: snok/install-poetry@v1
+        with:
+          version: '1.8.5'
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
