--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest]
+        deepl-version: ["1.0.0", "1.1.0", "1.2.0", "1.3.0", "1.4.0", "1.5.0", "1.6.0", "1.7.0", "1.8.0", "1.9.0", "1.10.0", "1.11.0", "1.12.0", "1.13.0", "1.14.0", "1.15.0", "1.16.0", "1.17.0", "1.18.0", "1.19.0", "1.20.0", "1.21.0"]
+        haystack-ai-version: ["2.0.0", "2.1.0", "2.2.0", "2.3.0", "2.4.0", "2.5.0", "2.6.0", "2.7.0", "2.8.0", "2.9.0", "2.10.0"]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -29,6 +31,10 @@ jobs:
           cache: 'poetry'
       - name: Install Dependencies
         run: poetry install --only main,test
+      - name: Install deepl version
+        run: poetry add deepl==${{ matrix.deepl-version }}
+      - name: Install haystack-ai version
+        run: poetry add haystack-ai==${{ matrix.haystack-ai-version }}
       - name: Test
         run: make test-unit
       - uses: codecov/codecov-action@v4
