--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest]
-        deepl-version: ["1.0.0", "1.4.0", "1.8.0", "1.12.0", "1.16.0", "1.20.0", "1.21.0"]
+        deepl-version: ["1.19.0", "1.20.0", "1.21.0"]
         haystack-ai-version: ["2.0.0", "2.4.0", "2.8.0", "2.10.0"]
       fail-fast: false
     runs-on: ${{ matrix.os }}
