--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,18 +24,19 @@ python = ">=3.9,<3.13"
 deepl = "^1.19.1"
 haystack-ai = "^2.0.0"
 pytest-dotenv = "^0.5.2"
+pytest = "^8.4.1"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.5"
-pytest-mock = "^3.14.0"
-pytest-cov = "^6.1.1"
+pytest-mock = "^3.14.1"
+pytest-cov = "^6.2.1"
 
 [tool.poetry.group.lint.dependencies]
-ruff = "0.11.9"
-mypy = "1.15.0"
+ruff = "0.12.11"
+mypy = "1.17.1"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^4.2.0"
+pre-commit = "^4.3.0"
 
 [tool.ruff]
 
