--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,47 +14,44 @@ jobs:
     name: Unit Tests
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         os: [ubuntu-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-      - uses: snok/install-poetry@v1
-        with:
-          version: '1.8.5'
-      - uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
+          enable-cache: true
       - name: Install Dependencies
-        run: poetry install --only main,test
+        run: uv sync --no-default-groups --group ci --group test
       - name: Test
         run: make test-unit
       - uses: codecov/codecov-action@v4
         with:
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
+
   integration-tests:
     name: Integration Tests
     needs: unit-tests
     strategy:
       matrix:
-        python-version: [ "3.11" ]
+        python-version: [ "3.13" ]
         os: [ ubuntu-latest ]
     runs-on: ubuntu-latest
     env:
       DEEPL_API_KEY: ${{ secrets.DEEPL_API_KEY }}
     steps:
       - uses: actions/checkout@v4
-      - uses: snok/install-poetry@v1
-        with:
-          version: '1.8.5'
-      - uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'poetry'
+          enable-cache: true
       - name: Install Dependencies
-        run: poetry install --only main,test
+        run: uv sync --no-default-groups --group ci --group test
       - name: Test
         run: make test-integration
