--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,10 @@ Repository = "https://github.com/dribia/deepl-haystack"
 "Bug Tracker" = "https://github.com/dribia/deepl-haystack/issues"
 
 [dependency-groups]
+dev = ["pre-commit>=4.3.0,<5"]
+ci = [
+    "setuptools>=80.9.0,<81",
+]
 test = [
     "pytest>=8.3.5,<9",
     "pytest-mock>=3.14.1,<4",
@@ -44,7 +48,6 @@ lint = [
     "ruff==0.12.11",
     "mypy==1.17.1",
 ]
-dev = ["pre-commit>=4.3.0,<5"]
 
 [tool.uv]
 default-groups = [
@@ -56,6 +59,9 @@ default-groups = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.ruff]
+target-version = "py39"
 
 [tool.ruff.lint]
 select = [
