--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,6 @@ requires-python = ">=3.9,<3.14"
 readme = "README.md"
 license = "MIT"
 maintainers = [
-    { name = "Albert Iribarne", email = "iribarne@dribia.com" },
     { name = "Dribia Data Research", email = "code@dribia.com" },
 ]
 keywords = [
@@ -21,6 +20,13 @@ classifiers = [
     "Intended Audience :: Science/Research",
     "Operating System :: OS Independent",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
     "deepl>=1.19.1,<2",
