--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -16,7 +16,7 @@ updates:
     commit-message:
       prefix: ":arrow_up:"
 
-  - package-ecosystem: "pip"
+  - package-ecosystem: "uv"
     target-branch: "main"
     directory: "/" # Location of package manifests
     schedule:
@@ -34,7 +34,7 @@ updates:
       prefix: ":arrow_up:"
     versioning-strategy: "lockfile-only"
 
-  - package-ecosystem: "pip"
+  - package-ecosystem: "uv"
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
